Tango/DLL Files/TANGO DLL for Visual Studio VC++6.0 (32 Bit)/Tango_DLL.h

struct TLS_ControlInitPar
{
  int  Size;
  int  InterfaceType;
  char ComNameLength;
  char ComName[32];
  BOOL ShowProt;
  BOOL ShowCmdList;
  int  BaudRate;
  int  IOAdress;
  int  CardIndex;

  int  ControlType;
  char VersionStrLength;
  char VersionStr[64];
  int  Axes;
  int  ErrorCode;
  BOOL NewCmds;
  int  Encoder;
  BOOL Display, SpeedPoti, HandWheel, Snapshot, TVR, TriggerOut;
  BOOL DemoMode;
};

TANGO_API LSX_ConnectSimple(int lLSID, int lAnInterfaceType, char *pcAComName, int lABaudRate, int lAShowProt);



TANGO_API LS_Connect(void);

TANGO_API LS_ConnectSimple(int lAnInterfaceType, char *pcAComName, int lABaudRate, int lAShowProt);

TANGO_API LS_ConnectEx (TLS_ControlInitPar *pAControlInitPar);

TANGO_API LS_Disconnect (void);

TANGO_API LS_LoadConfig (char *pcFileName);

TANGO_API LS_SaveConfig (char *pcFileName);

TANGO_API LS_MoveAbs (double dX, double dY, double dZ, double dA, BOOL bWait);

TANGO_API LS_MoveRel (double dX, double dY, double dZ, double dA, BOOL bWait);

TANGO_API LS_Calibrate (void);

TANGO_API LS_RMeasure (void);

TANGO_API LS_SetPitch (double dX, double dY, double dZ, double dA);

TANGO_API LS_SetPos (double dX, double dY, double dZ, double dA);

TANGO_API LS_SetActiveAxes (int lFlags);

TANGO_API LS_SetVel (double dX, double dY, double dZ, double dA);

TANGO_API LS_SetAccel (double dX, double dY, double dZ, double dA);

TANGO_API LS_SetReduction (double dX, double dY, double dZ, double dA);

TANGO_API LS_SetDelay (int lDelay);

TANGO_API LS_SetSwitchPolarity (int lXP, int lYP, int lZP, int lAP);

TANGO_API LS_SetSwitchActive (int lXA, int lYA, int lZA, int lAA);

TANGO_API LS_SetJoystickOn (BOOL bPositionCount, BOOL bEncoder);

TANGO_API LS_SetJoystickOff (void);

TANGO_API LS_SoftwareReset (void);

TANGO_API LS_SetDigitalOutput (int lIndex, BOOL bValue);

TANGO_API LS_GetDigitalInputs (int *plValue);

TANGO_API LS_SetAnalogOutput (int lIndex, int lValue);

TANGO_API LS_GetAnalogInput (int lIndex, int *plValue);

TANGO_API LS_GetHdiKeys (int *plKey1, int *plKey2, int *plKey3, int *plKey4);

TANGO_API LS_SetLimit (int lAxis, double dMinRange, double dMaxRange);

TANGO_API LS_SetLimitControl (int lAxis, BOOL bActive);

TANGO_API LS_GetPos (double *pdX, double *pdY, double *pdZ, double *pdA);

TANGO_API LS_GetStatus (char *pcStat, int lMaxLen);

TANGO_API LS_GetEncoderMask (int *plFlags);

TANGO_API LS_StopAxes (void);

TANGO_API LS_SetAbortFlag (void);

TANGO_API LS_MoveRelSingleAxis (int lAxis, double dValue, BOOL bWait);

TANGO_API LS_MoveAbsSingleAxis (int lAxis, double dValue, BOOL bWait);

TANGO_API LS_SetControlPars (void);

TANGO_API LS_SetMotorCurrent (double dX, double dY, double dZ, double dA);

TANGO_API LS_SetVelSingleAxis (int lAxis, double dVel);

TANGO_API LS_SetAccelSingleAxis (int lAxis, double dAccel);

TANGO_API LS_CalibrateEx (int lFlags);

TANGO_API LS_RMeasureEx (int lFlags);

TANGO_API LS_SetShowProt (int lShowProt);

TANGO_API LS_GetAnalogInputs2 (int *plPT100, int *plMV, int *plV24);

TANGO_API LS_SendString (char *pcStr, char *pcRet, int lMaxLen, BOOL bReadLine, int lTimeOut);

TANGO_API LS_SetSpeedPoti (BOOL bSpeedPoti);

TANGO_API LS_SetTVRMode (int lXT, int lYT, int lZT, int lAT);

TANGO_API LS_SetAutoStatus (int lValue);

TANGO_API LS_GetStatusAxis(char *pcStatusAxisStr, int lMaxLen);

TANGO_API LS_SetDigIO_Off (int lIndex);

TANGO_API LS_SetDigIO_Polarity (int lIndex, BOOL bHigh);

TANGO_API LS_SetDigIO_EmergencyStop (int lIndex);

TANGO_API LS_SetDigIO_Distance (int lIndex, BOOL bFkt, double dDist, int lAxis);

TANGO_API LS_SetDimensions (int lXD, int lYD, int lZD, int lAD);

TANGO_API LS_MoveRelShort (void);

TANGO_API LS_SetEncoderPeriod (double dX, double dY, double dZ, double dA);

TANGO_API LS_SetJoystickDir (int lXD, int lYD, int lZD, int lAD);

TANGO_API LS_SetEncoderMask (int lValue);

TANGO_API LS_SetGear (double dX, double dY, double dZ, double dA);

TANGO_API LS_SetHandWheelOn (BOOL bPositionCount, BOOL bEncoder);

TANGO_API LS_SetHandWheelOff (void);

TANGO_API LS_SetFactorTVR (double dX, double dY, double dZ, double dA);

TANGO_API LS_SetTargetWindow (double dX, double dY, double dZ, double dA);

TANGO_API LS_SetController (int lXC, int lYC, int lZC, int lAC);

TANGO_API LS_SetControllerCall (int lCtrCall);

TANGO_API LS_SetControllerSteps (double dX, double dY, double dZ, double dA);

TANGO_API LS_SetControllerFactor (double dX, double dY, double dZ, double dA);

TANGO_API LS_SetControllerTWDelay(int lCtrTWDelay);

TANGO_API LS_SetEncoderRefSignal (int lXR, int lYR, int lZR, int lAR);

TANGO_API LS_SetEncoderPosition (BOOL bValue);

TANGO_API LS_GetVersionStr (char *pcVers, int lMaxLen);

TANGO_API LS_GetError (int *plErrorCode);

TANGO_API LS_GetPosSingleAxis (int lAxis, double *pdPos);

TANGO_API LS_SetDistance (double dX, double dY, double dZ, double dA);

TANGO_API LS_GetPosEx (double *pdX, double *pdY, double *pdZ, double *pdR, BOOL bEncoder);

TANGO_API LS_SetShowCmdList (BOOL bShowCmdList);

TANGO_API LS_SetWriteLogText (BOOL bAWriteLogText);

TANGO_API LS_SetControllerTimeout (int lACtrTimeout);

TANGO_API LS_SetEncoderActive (int lFlags);

TANGO_API LS_GetSnapshotCount (int *plSnsCount);

TANGO_API LS_GetSnapshotPos (double *pdX, double *pdY, double *pdZ, double *pdA);

TANGO_API LS_SetCorrTblOff (void);

TANGO_API LS_SetCorrTblOn (char *pcAFileName);

TANGO_API LS_SetFactorMode (BOOL bAFactorMode, double dX, double dY, double dZ, double dA);

TANGO_API LS_SetSnapshot (BOOL bASnapshot);

TANGO_API LS_SetSnapshotPar (BOOL bHigh, BOOL bAutoMode);

TANGO_API LS_SetTrigger (BOOL bATrigger);

TANGO_API LS_SetTriggerPar (int lAxis, int lMode, int lSignal, double dDistance);


TANGO_API LS_SetLanguage (char *pcPLN);

TANGO_API LS_GetSwitches (int *plFlags);

TANGO_API LS_GetSerialNr (char *pcSerialNr, int lMaxLen);

TANGO_API LS_SetCalibOffset (double dX, double dY, double dZ, double dR);

TANGO_API LS_SetRMOffset (double dX, double dY, double dZ, double dR);

TANGO_API LS_GetSnapshotPosArray (int lIndex, double *pdX, double *pdY, double *pdZ, double *pdR);