Tango/DLL Examples/Visual_Basic/SourceCode/Tango.vb

Option Strict Off
Option Explicit On
Module Module1
    Declare Function LS_Connect Lib "Tango_dll.dll" () As Integer
    Declare Function LS_ConnectSimple Lib "Tango_dll.dll" (ByVal lAnInterfaceType As Integer, ByVal pcAComName As String, ByVal lABaudRate As Integer, ByVal bAShowProt As Integer) As Integer
    Declare Function LSX_ConnectSimple Lib "Tango_dll.dll" (ByVal lID As Integer, ByVal lAnInterfaceType As Integer, ByVal pcAComName As String, ByVal lABaudRate As Integer, ByVal bAShowProt As Integer) As Integer
    Declare Function LS_ConnectEx Lib "Tango_dll.dll" (ByRef pAControlInitPar As Object) As Integer
    Declare Function LS_Disconnect Lib "Tango_dll.dll" () As Integer
    Declare Function LS_LoadConfig Lib "Tango_dll.dll" (ByVal pcFileName As String) As Integer
    Declare Function LS_SaveConfig Lib "Tango_dll.dll" (ByVal pcFileName As String) As Integer
    Declare Function LS_MoveAbs Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double, ByVal bWait As Integer) As Integer
    Declare Function LS_MoveRel Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double, ByVal bWait As Integer) As Integer
    Declare Function LS_Calibrate Lib "Tango_dll.dll" () As Integer
    Declare Function LS_RMeasure Lib "Tango_dll.dll" () As Integer
    Declare Function LS_SetPitch Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
    Declare Function LS_SetPos Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
    Declare Function LS_SetActiveAxes Lib "Tango_dll.dll" (ByVal lFlags As Integer) As Integer
    Declare Function LS_SetVel Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
    Declare Function LS_SetAccel Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
    Declare Function LS_SetReduction Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
    Declare Function LS_SetDelay Lib "Tango_dll.dll" (ByVal lDelay As Integer) As Integer
    Declare Function LS_SetSwitchPolarity Lib "Tango_dll.dll" (ByVal lXP As Integer, ByVal lYP As Integer, ByVal lZP As Integer, ByVal lAP As Integer) As Integer
    Declare Function LS_SetSwitchActive Lib "Tango_dll.dll" (ByVal lXA As Integer, ByVal lYA As Integer, ByVal lZA As Integer, ByVal lAA As Integer) As Integer
    Declare Function LS_SetJoystickOn Lib "Tango_dll.dll" (ByVal bPositionCount As Integer, ByVal bEncoder As Integer) As Integer
    Declare Function LS_SetJoystickOff Lib "Tango_dll.dll" () As Integer
    Declare Function LS_SoftwareReset Lib "Tango_dll.dll" () As Integer
    Declare Function LS_SetDigitalOutput Lib "Tango_dll.dll" (ByVal lIndex As Integer, ByVal bValue As Integer) As Integer
    Declare Function LS_GetDigitalInputs Lib "Tango_dll.dll" (ByRef plValue As Integer) As Integer
    Declare Function LS_SetAnalogOutput Lib "Tango_dll.dll" (ByVal lIndex As Integer, ByVal lValue As Integer) As Integer
    Declare Function LS_GetAnalogInput Lib "Tango_dll.dll" (ByVal lIndex As Integer, ByRef plValue As Integer) As Integer
    Declare Function LS_GetHdiKeys Lib "Tango_dll.dll" (ByRef plKey1 As Integer, ByRef plKey2 As Integer, ByRef plKey3 As Integer, ByRef plKey4 As Integer) As Integer
    Declare Function LS_SetLimit Lib "Tango_dll.dll" (ByVal lAxis As Integer, ByVal dMinRange As Double, ByVal dMaxRange As Double) As Integer
    Declare Function LS_SetLimitControl Lib "Tango_dll.dll" (ByVal lAxis As Integer, ByVal bActive As Integer) As Integer
    Declare Function LS_GetPos Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
    Declare Function LS_GetStatus Lib "Tango_dll.dll" (ByVal pcStat As String, ByVal lMaxLen As Integer) As Integer
    Declare Function LS_GetEncoderMask Lib "Tango_dll.dll" (ByRef plFlags As Integer) As Integer
    Declare Function LS_StopAxes Lib "Tango_dll.dll" () As Integer
    Declare Function LS_SetAbortFlag Lib "Tango_dll.dll" () As Integer
    Declare Function LS_MoveRelSingleAxis Lib "Tango_dll.dll" (ByVal lAxis As Integer, ByVal dValue As Double, ByVal bWait As Integer) As Integer
    Declare Function LS_MoveAbsSingleAxis Lib "Tango_dll.dll" (ByVal lAxis As Integer, ByVal dValue As Double, ByVal bWait As Integer) As Integer
    Declare Function LS_SetControlPars Lib "Tango_dll.dll" () As Integer
    Declare Function LS_SetMotorCurrent Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
    Declare Function LS_SetVelSingleAxis Lib "Tango_dll.dll" (ByVal lAxis As Integer, ByVal dVel As Double) As Integer
    Declare Function LS_SetAccelSingleAxis Lib "Tango_dll.dll" (ByVal lAxis As Integer, ByVal dAccel As Double) As Integer
    Declare Function LS_CalibrateEx Lib "Tango_dll.dll" (ByVal lFlags As Integer) As Integer
    Declare Function LS_RMeasureEx Lib "Tango_dll.dll" (ByVal lFlags As Integer) As Integer
    Declare Function LS_SetShowProt Lib "Tango_dll.dll" (ByVal bShowProt As Integer) As Integer
    Declare Function LS_GetAnalogInputs2 Lib "Tango_dll.dll" (ByRef plPT100 As Integer, ByRef plMV As Integer, ByRef plV24 As Integer) As Integer
    Declare Function LS_SendString Lib "Tango_dll.dll" (ByVal pcStr As String, ByVal pcRet As String, ByVal lMaxLen As Integer, ByVal bReadLine As Integer, ByVal lTimeOut As Integer) As Integer
    Declare Function LS_SetSpeedPoti Lib "Tango_dll.dll" (ByVal bSpeedPoti As Integer) As Integer
    Declare Function LS_SetTVRMode Lib "Tango_dll.dll" (ByVal lXT As Integer, ByVal lYT As Integer, ByVal lZT As Integer, ByVal lAT As Integer) As Integer
    Declare Function LS_SetAutoStatus Lib "Tango_dll.dll" (ByVal lValue As Integer) As Integer
    Declare Function LS_GetStatusAxis Lib "Tango_dll.dll" (ByVal pcStatusAxisStr As String, ByVal lMaxLen As Integer) As Integer
    Declare Function LS_SetDigIO_Off Lib "Tango_dll.dll" (ByVal lIndex As Integer) As Integer
    Declare Function LS_SetDigIO_Polarity Lib "Tango_dll.dll" (ByVal lIndex As Integer, ByVal bHigh As Integer) As Integer
    Declare Function LS_SetDigIO_EmergencyStop Lib "Tango_dll.dll" (ByVal lIndex As Integer) As Integer
    Declare Function LS_SetDigIO_Distance Lib "Tango_dll.dll" (ByVal lIndex As Integer, ByVal bFkt As Integer, ByVal dDist As Double, ByVal lAxis As Integer) As Integer
    Declare Function LS_SetDimensions Lib "Tango_dll.dll" (ByVal lXD As Integer, ByVal lYD As Integer, ByVal lZD As Integer, ByVal lAD As Integer) As Integer
    Declare Function LS_MoveRelShort Lib "Tango_dll.dll" () As Integer
    Declare Function LS_SetEncoderPeriod Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
    Declare Function LS_SetJoystickDir Lib "Tango_dll.dll" (ByVal lXD As Integer, ByVal lYD As Integer, ByVal lZD As Integer, ByVal lAD As Integer) As Integer
    Declare Function LS_SetEncoderMask Lib "Tango_dll.dll" (ByVal lValue As Integer) As Integer
    Declare Function LS_SetGear Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
    Declare Function LS_SetHandWheelOn Lib "Tango_dll.dll" (ByVal bPositionCount As Integer, ByVal bEncoder As Integer) As Integer
    Declare Function LS_SetHandWheelOff Lib "Tango_dll.dll" () As Integer
    Declare Function LS_SetFactorTVR Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
    Declare Function LS_SetTargetWindow Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
    Declare Function LS_SetController Lib "Tango_dll.dll" (ByVal lXC As Integer, ByVal lYC As Integer, ByVal lZC As Integer, ByVal lAC As Integer) As Integer
    Declare Function LS_SetControllerCall Lib "Tango_dll.dll" (ByVal lCtrCall As Integer) As Integer
    Declare Function LS_SetControllerSteps Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
    Declare Function LS_SetControllerFactor Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
    Declare Function LS_SetControllerTWDelay Lib "Tango_dll.dll" (ByVal lCtrTWDelay As Integer) As Integer
    Declare Function LS_SetEncoderRefSignal Lib "Tango_dll.dll" (ByVal lXR As Integer, ByVal lYR As Integer, ByVal lZR As Integer, ByVal lAR As Integer) As Integer
    Declare Function LS_SetEncoderPosition Lib "Tango_dll.dll" (ByVal bValue As Integer) As Integer
    Declare Function LS_GetVersionStr Lib "Tango_dll.dll" (ByVal pcVers As String, ByVal lMaxLen As Integer) As Integer
    Declare Function LS_GetError Lib "Tango_dll.dll" (ByRef plErrorCode As Integer) As Integer
    Declare Function LS_GetPosSingleAxis Lib "Tango_dll.dll" (ByVal lAxis As Integer, ByRef pdPos As Double) As Integer
    Declare Function LS_SetDistance Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
    Declare Function LS_GetPosEx Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double, ByVal bEncoder As Integer) As Integer
    Declare Function LS_SetShowCmdList Lib "Tango_dll.dll" (ByVal bShowCmdList As Integer) As Integer
    Declare Function LS_SetWriteLogText Lib "Tango_dll.dll" (ByVal bAWriteLogText As Integer) As Integer
    Declare Function LS_SetControllerTimeout Lib "Tango_dll.dll" (ByVal lACtrTimeout As Integer) As Integer
    Declare Function LS_SetEncoderActive Lib "Tango_dll.dll" (ByVal lFlags As Integer) As Integer
    Declare Function LS_GetSnapshotCount Lib "Tango_dll.dll" (ByRef plSnsCount As Integer) As Integer
    Declare Function LS_GetSnapshotPos Lib "Tango_dll.dll" (ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
    Declare Function LS_SetCorrTblOff Lib "Tango_dll.dll" () As Integer
    Declare Function LS_SetCorrTblOn Lib "Tango_dll.dll" (ByVal pcAFileName As String) As Integer
    Declare Function LS_SetFactorMode Lib "Tango_dll.dll" (ByVal bAFactorMode As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
    Declare Function LS_SetSnapshot Lib "Tango_dll.dll" (ByVal bASnapshot As Integer) As Integer
    Declare Function LS_SetSnapshotPar Lib "Tango_dll.dll" (ByVal bHigh As Integer, ByVal bAutoMode As Integer) As Integer
    Declare Function LS_SetTrigger Lib "Tango_dll.dll" (ByVal bATrigger As Integer) As Integer
    Declare Function LS_SetTriggerPar Lib "Tango_dll.dll" (ByVal lAxis As Integer, ByVal lMode As Integer, ByVal lSignal As Integer, ByVal dDistance As Double) As Integer
    Declare Function LS_SetLanguage Lib "Tango_dll.dll" (ByVal pcPLN As String) As Integer
    Declare Function LS_GetSwitches Lib "Tango_dll.dll" (ByRef plFlags As Integer) As Integer
    Declare Function LS_GetSerialNr Lib "Tango_dll.dll" (ByVal pcSerialNr As String, ByVal lMaxLen As Integer) As Integer
    Declare Function LS_SetCalibOffset Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
    Declare Function LS_SetRMOffset Lib "Tango_dll.dll" (ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
    Declare Function LS_GetSnapshotPosArray Lib "Tango_dll.dll" (ByVal lIndex As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
